@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * $Id: modelfactory.h,v 1.9 2003/09/08 13:01:45 garbeam Exp $
+ * $Id: modelfactory.h,v 1.10 2003/09/30 21:54:18 vanto Exp $
  *
  *****************************************************************************/
 #ifndef MODELFACTORY_H
@@ -41,8 +41,9 @@ public:
 
     /**
      * Generates cpu respectivly core models
+     * @param virgin set this to true to create clean new instances.
      */
-    static QValueList<AbstractModel *> generate(QDomNode node);
+    static QValueList<AbstractModel *> generate(QDomNode node, bool virgin = true);
 };
 
 #endif // MODELFACTORY_H
