@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * $Id: pinmodel.h,v 1.20 2003/09/29 14:32:27 garbeam Exp $
+ * $Id: pinmodel.h,v 1.21 2003/09/30 21:54:18 vanto Exp $
  *
  *****************************************************************************/
 
@@ -173,11 +173,6 @@ public:
     PinView *createView(BlockView *block,
             PinView::DockPosition dockPosition);
 
-    /**
-     * Returns the according PinView.
-     * Returns 0 if the pinView has not been instanciated
-     */
-    PinView *view();
 
     /**
      * Serializes this instance to a xml subtree
