@@ -1,3 +1,7 @@
+2003-09-30  Tammo van Lessen  <vanto@users.sourceforge.net>
+
+	* project.cpp: connector (de)serialization changed, id bug fixed
+
 2003-09-28  Steffen Pingel  <squig@users.sourceforge.net>
 
 	* modelfactory.cpp (generate): Added input and output blocks.
